# syntax-game

./: .env.example  .gitignore  README.md  app.py  claude.py  file_runner.py  main.py  pyproject.toml  utils.py  voice.py
levels/: level1.run.py  level1.txt  level2.txt  level3.txt  level4.txt  template.txt
static/: style.css
templates/: index.html
